kube/inverted/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invertedle
  labels:
    app: invertedle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invertedle
  template:
    metadata:
      labels:
        app: invertedle
    spec:
      containers:
      - name: invertedle
        image: kingbrady/invertedle:1.0.0
        ports:
        - containerPort: 80
