kube/inverted/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: invertedle
  namespace: invertedle
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: invertedle
  type: ClusterIP
